# excel-copilot

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  background.js  chat.js  content.js  env.example  excel-viewer.html  excel-viewer.js  manifest.json  popup.html  popup.js
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  models.rs
chrome-extension/: excel-viewer.html  excel-viewer.js  manifest.json  package.json  styles.css
frontend/: package.json
frontend/src/: App.js
frontend/src/components/: ExcelViewer.css  ExcelViewer.js  SettingsModal.css  SettingsModal.js
web/: .env  ARCHITECTURE.md  docker-compose.yml  nginx.conf  package-lock.json  package.json
web/backend/src/: handlers.rs
web/backend/src/services/: openai_service.rs
web/frontend/src/: App.css
web/frontend/src/components/: ChatInterface.js
web/frontend/src/services/: api.js
web/public/: index.html
web/src/: setupProxy.js
web/src/components/: ChatInterface.css  ChatInterface.js
web/src/services/: api.js
