[package]
name = "excel-copilot-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
